[tool.poetry]
name = "nautobot-plugin-chatops-meraki"
version = "0.0.1"
description = "Nautobot Chatops Cisco Meraki Integration"
authors = ["Network to Code <opensource@networktocode.com>"]

readme = "README.md"
homepage = "https://github.com/networktocode-llc/nautobot-chatops-extension-meraki.git"
repository = "https://github.com/networktocode-llc/nautobot-chatops-extension-meraki.git"
keywords = ["nautobot", "nautobot-plugin"]
include = [
    "README.md",
]
packages = [
    { include = "nautobot_plugin_chatops_meraki" },
]
[tool.poetry.plugins."nautobot.workers"]
"meraki" = "nautobot_plugin_chatops_meraki.worker:cisco_meraki"

[tool.poetry.dependencies]
python = "^3.6"
invoke = "^1.4.1"
nautobot-chatops = "^1.1.0"
typing-extensions = "^3.10.0"
meraki = "^1.7.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
yamllint = "^1.23.0"
bandit = "^1.6.2"
pylint = "^2.5.2"
pylint-django = "^2.0.15"
pydocstyle = "^5.0.2"

[tool.black]
line-length = 120
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | settings.py     # This is where you define files that should not be stylized by black
                     # the root of the project
)
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pylint.master]
# Include the pylint_django plugin to avoid spurious warnings about Django patterns
load-plugins="pylint_django"

[tool.pylint.basic]
# No docstrings required for private methods (Pylint default), or for test_ functions, or for inner Meta classes.
no-docstring-rgx="^(_|test_|Meta$)"

[tool.pylint.messages_control]
# Line length is enforced by Black, so pylint doesn't need to check it.
# Pylint and Black disagree about how to format multi-line arrays; Black wins.
disable = """
    line-too-long,
    bad-continuation,
    too-few-public-methods,
    too-many-ancestors,
    too-many-instance-attributes,
    duplicate-code
    """

[tool.pylint.miscellaneous]
# Don't flag TODO as a failure, let us commit with things that still need to be done in the code
notes = """,
    FIXME,
    XXX,
    """